--- a/AndBible/res/values-te/strings.xml
+++ b/AndBible/res/values-te/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>నావిగేషన్</b>\n\nముందు లేదా వెనకటి అధ్యాయాల్లో వెళ్లడానికి మెనులోకి వెళ్లీ వేలితో కదపండి\n\nస్క్రీన్ ఆన్ లేదా ఆప్ చేయడానికి రెండు సార్లు నొక్కాలి\n\n\n<b>మెను</b>\n\nకార్యకలపాల కొరకు మెను బటన్‌ని నొక్కండి\n\n\nమరిన్ని డాక్యుమెంట్స్ డవున్ లోడ్ చేయడానికి మెనును నొక్కండి/ మరిన్ని/డాక్యుమెంట్స్ డవున్ లోడ్\n\n\n<b>సంభాషణ</b>\n\nడైలాగ్ వినడానికి లేదా ఆపుటకు సంభాషణ బటన్‌ని నొక్కండి\n\n\n<b>నా నోట్స్</b>\n\nనా నోట్స్ అనే మెను ద్వారా వచనాల సందర్భాసారంగా నోట్స్ చేర్చవచ్చు. అంతకుముందు నోట్స్ చూడడానికి మెయిన్ మెను ద్వారా చూడొచ్చు. \n\n\n<b>బుక్ మార్క్‌స్</b>\n వచనాల మెను ఆధారంగా బుక్ మార్క్‌స్ చేర్చవచ్చు. బుక్ మార్క్ చేయబడిన విషయాలను మెయిన్ మెను ద్వారా చూడవచ్చు. బుక్ మార్క్ మెనెజర్ సందర్భ మెను ద్వారా లేబెల్స్ చేయబడిన బుక్ మార్క్ గుంపుని చూడవచ్చు. \n\n<b>వెతకు</b>\n\nవెతకడం మెను కొరకు ఇలాంటి ప్రత్యేక చిహ్నాలు కలిగి వుంటవి అవి *, ?, AND, OR, NOT (మరిన్ని వివరాల కొరకు \"అపచె లూసిన్-క్వేరి పార్సర్ సింటక్స్\" ని చూడండి.) \n\n\n<b>సంధర్భ మెను</b>\n\nకనిపిస్తున్న బైబిల్లోని వచనం పైన సుధీర్ఘముగా నొక్కడం వల్ల వచన సంధర్భములోకి వెళ్లవచ్చు.\n\nడాక్యమెంటు పైన సుధీర్ఘముగా నొక్కినట్టయితే ఆ ఎంపిక చేసిన డాక్యుమెంటుని తొలగించాలా లేదా దాన్ని గూర్చిన సమాచారాన్ని చూడాలా. \n\nబ్యాక్ బటన్‌ని సుధీర్ఘముగా నొక్కిట్టయితే దానికి సంబంధించిన చరిత్రలోకి తీసుకువేళుతుంది. </string>
   <string name="version_text">వర్షన్ %s</string>
   <string name="no_sdcard_error">దయచేసి SD కార్డ్ లోపల పెట్టి మరొక సారి ఆండ్ బైబిల్ మొదలు పెట్టండి.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">డాక్యుమెంట్</string>
   <string name="selectPassage">వాక్యభాగము</string>
   <string name="search">వెతుకు</string>
