--- a/AndBible/res/values-cs/strings.xml
+++ b/AndBible/res/values-cs/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navigace</b>\nNa další nebo předchozí kapitolu lze přejít track-ballem, D-padem nebo posuvem prstu dolevo nebo doprava.\nDvojdotykem lze zapnout/vypnout režimm celé obrazovky.\n\n<b>Menu</b>\nAkce lze vyvolávat z klávesou MENU \n\nVíce dokumentů je možno stáhnou stisknutím Menu/Více/Stáhnout dokumenty \n\n<b>Mluvení</b>\nStisknutím Mluvení se přistupuje k dialogu pro zapnutí nebo vypnutí čtení\n\n<b>Poznámky</b>\nPoznámky lze přidat z kontextového menu verše. Správce poznámek je přístupný z hlavního menu. Kontextové menu správce poznámek umožňuje třídění poznámek. Ke skupinán se přiřazují popisky.\n\n<b>Záložky</b>\nZáložky lze přidat z kontextového menu verše. Správce záložek je přístupný z hlavního menu. Kontextové menu správce záložek umožňuje třídění záložek do skupin. Ke skupinám se přiřazují popisky.\n\n<b>Hledání</b>\nText pro vyhledávání může zahrnovat speciální znaky jako *, ?, AND, OR, NOT (podrobnosti viz \\"Apache Lucene - Query Parser Syntax\\")\n\n<b>Kontextová menu</b>\nDlouhý stisk v náhledu Bible vyvolá kontextové menu s akcemi, ovlivňující současný verš. \nDlouhým stiskem v okně pro výběr dokumentu lze dokument odstranit nebo o něm zobrazit informace.\nDlouhým stiskem tlačítka Zpět je možno přistupovat k seznamu s historií.</string>
   <string name="version_text">Verze %s</string>
   <string name="no_sdcard_error">Prosím vložte SD kartu a spusťte And Bible znovu.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Dokument</string>
   <string name="selectPassage">Pasáž</string>
   <string name="search">Hledat</string>
