--- a/AndBible/res/values-de/strings.xml
+++ b/AndBible/res/values-de/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navigation</b>\nKapitelnavigation ist mit dem Trackball, D-pad oder durch Querstreichen mit dem Finger möglich. \nAuf den unteren Bildschirmrand tippen, um eine Seite weiter zu blättern.\nDoppeltes Tippen schaltet den Vollbildmodus ein und aus.\n\n<b>Menüs</b>\nFür verschiedene Einstellungen \"Menü\" auswählen \nUm Module herunterzuladen, \"Menü-Optionen-Module herunterladen\" auswählen\n\n<b>Sprachausgabe</b>\nUm sich einen Text vorlesen zu lassen, \"Sprachausgabe\" auswählen.\n\n<b>Eigene Notizen</b>\nNotizen können über das Menü \"Eigene Notizen\" im Kontextmenü hinzugefügt werden. Die Liste der erstellten Notizen ist über das Hauptmenü abrufbar.\n\n\n<b>Lesezeichen</b>\nLesezeichen werden über das Vers-Kontextmenü hinzugefügt. Die angelegten Lesezeichen können über den Eintrag \"Lesezeichen\" im Hauptmenü verwaltet werden. Dort kann man über das Kontextmenü (langes Drücken) die Lesezeichen nach Gruppen ordnen.\n\n<b>Suche</b>\nDie Suche kann Platzhalter wie *, ?, AND, OR, NOT enthalten (weitere Informationen unter \"Apache Lucene - Query Parser Syntax\")\n\n<b>Kontextmenüs</b>\nFür Aktionen betreffend den aktuellen Vers lang auf den Bildschirm drücken. \nUm ein Modul zu löschen oder Informationen anzusehen, im Dokument-Auswahldialog lang auf das entsprechende Modul drücken. \nLang auf \"Zurück\" drücken, um den Verlauf anzusehen.</string>
   <string name="version_text">Version %s</string>
   <string name="no_sdcard_error">Bitte legen Sie eine SD-Karte ein und starten Sie And Bible neu.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Dokument</string>
   <string name="selectPassage">Navigation</string>
   <string name="search">Suche</string>
@@ -15,6 +15,7 @@
   <string name="history">Verlauf</string>
   <string name="speak">Vorlesen</string>
   <string name="help">Hilfe</string>
+  <string name="verse">Vers</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Buchauswahl</string>
   <string name="choosePassageChapterName">Kapitelauswahl</string>
@@ -214,6 +215,7 @@
   <string name="save">Speichern</string>
   <string name="error">Fehler</string>
   <string name="more">Mehr</string>
+  <string name="more_dotted">Mehr...</string>
   <string name="retry">Wiederholen</string>
   <string name="please_wait">Bitte warten...</string>
   <string name="all">Alles</string>
