--- a/AndBible/res/values-es/strings.xml
+++ b/AndBible/res/values-es/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navegación</b>\nVaya al capítulo siguiente o anterior usando la track-ball, el D-pad o desplazando la pantalla con su dedo\n    \nDoble toque alterna Pantalla completa sí/no.\n    \n\n<b>Menú</b>\n    \nPulse el botón MENÚ para acciones\n    \n\nPara descargar más documentos pulse Menú/Más/Descargar Documento\n    \n\n<b>Lectura con voz</b>\nPulse Con voz para acceder a un diálogo para empezar o parar la lectura\n    \n\n<b>Mi Nota</b>\nSe pueden agregar notas a través del elemento de menú Mi Nota en el menú contextual del versículo. La lista de las notas existentes es accesible desde el menú principal.\n    \n\n<b>Marcadores</b>\nSe pueden agregar Marcadores a través del menú contextual del versículo. El gestor de marcadores es accesible desde el menú principal. El menú contextual del gestor de marcadores permite agrupar los marcadores usando etiquetas.\n    \n\n<b>Búsqueda</b>\nLa búsqueda de texto puede incluir caracteres especiales como *, ?, AND, OR, NOT (vea \"Apache Lucene - Query Parser Syntax\" para más detalles)\n    \n\n<b>Menús contextuales</b>\n    \nPresione y mantenga pulsado en la vista de Biblia para abrir el menú contextual para acciones que afecten al versículo actual.\n\nPresione y mantenga en un documento en el selector de documentos para borrarlo o ver su información.\n    \nPresiona y mantenga el botón Atrás para acceder al historial.\n    </string>
   <string name="version_text">Versión %s</string>
   <string name="no_sdcard_error">Por favor inserte una tarjeta SD e inicie And Bible nuevamente.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Documento</string>
   <string name="selectPassage">Pasaje</string>
   <string name="search">Encuentra</string>
@@ -15,6 +15,7 @@
   <string name="history">Historia</string>
   <string name="speak">Con voz</string>
   <string name="help">Ayuda</string>
+  <string name="verse">Verso</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Elige Libro</string>
   <string name="choosePassageChapterName">Elige Capítulo</string>
@@ -214,6 +215,7 @@
   <string name="save">Guarda</string>
   <string name="error">Error</string>
   <string name="more">Más</string>
+  <string name="more_dotted">Más...</string>
   <string name="retry">Intenta nuevamente</string>
   <string name="please_wait">Por favor espere...</string>
   <string name="all">Todo</string>
