--- a/AndBible/res/values-in/strings.xml
+++ b/AndBible/res/values-in/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navigasi</b> \nKlik bab berikutnya atau sebelumnya dengan menggunakan jalur-bola, D-pad atau menggesekkan layar dengan jari anda\nKilk dua kali untuk matikan atau hidupkan Fullscreen. \n\n<b>Menu</b>\nTekan tombol MENU untuk tindakan\n\nUntuk men-download lebih banyak dokumen tekan Menu / Lainnya / Ambil Dokumen Pers\n\n<b>Pidato</b> \nTekan Berbicara untuk akses sebuah percakapan untuk mulai atau stop membaca\n\n<b>Catatan Saya</b> \nCatatan bisa ditambahkan melalui menu Catatan Saya pada menu konteks ayat. Daftar catatan yang ada dapat diakses melalui menu utama.\n\n <b>Bookmarks</b> \nBookmarks dapat ditambahkan melalui menu konteks ayat. Manajer Bookmark diakses melalui menu utama. Manajer Bookmark menu konteks memungkinkan bookmark untuk dikelompokkan menggunakan label. \n\n<b>Pencarian</b> \nTeks Pencarian dapat menyertakan karakter khusus seperti *, ?, AND, OR, NOT (lihat \"Apache Lucene - Query Parser Syntax\" untuk penjelas lebih mendetail).\n \n<b>Menu Konteks</b> \nTekan lama pada tampilan Alkitab melihat untuk membuka menu konteks untuk tindakan yg mempengaruhi ayat yg sedang dibuka. \nTekan lama pada dokumen dalam pilihan dokumen untuk menghapus atau melihat informasi.\nTekan lama pada tombol Kembali untuk mengakses Daftar riwayat</string>
   <string name="version_text">Versi %s</string>
   <string name="no_sdcard_error">Silahkan masukkan kartu SD dan mulai And Alkitab lagi.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Dokumen</string>
   <string name="selectPassage">Nats</string>
   <string name="search">Cari</string>
@@ -15,6 +15,7 @@
   <string name="history">Sejarah</string>
   <string name="speak">Berbicara</string>
   <string name="help">Bantuan</string>
+  <string name="verse">Ayat</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Pilih Buku</string>
   <string name="choosePassageChapterName">Pilih Bab</string>
@@ -214,6 +215,7 @@
   <string name="save">Simpan</string>
   <string name="error">Kesalahan</string>
   <string name="more">Lebih</string>
+  <string name="more_dotted">Lebih lanjut...</string>
   <string name="retry">Coba lagi</string>
   <string name="please_wait">Silakan tunggu ...</string>
   <string name="all">Semua</string>
