--- a/AndBible/res/values-kk/strings.xml
+++ b/AndBible/res/values-kk/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Навигация</b>⏎\nКомпьютер жүгірткісі, жандандыру панель немесе экран бейнесіне бармақтарыңызды тигізу арқылы келесі немесе алдағы өткен тарауға барыңыз⏎\n⏎\nАуыстырып қосқышты екі қайта-басып Толық экран бейнесі қосылады/сөндірледі.⏎\n⏎\n⏎\n<b>Мәзір</b>⏎\n⏎\nІс әрекеттер жасау үшін МӘЗІР белгісін басыңыз⏎\n⏎\n⏎\nКөбірек құжаттарды жүктеу үшін \"Мәзір/Көбірек/Құжаттарды жүктеу\" барыңыз⏎\n⏎\n⏎\n<b>Сөйлеу</b>⏎\nДиалог оқуын бастау немесе тоқтату үшін Сөйлеу белгісін басыңыз⏎\n⏎\n⏎\n<b>Менің Жазбам</b>⏎\nАят контекст мәзіріндегі Менің Жазбаларым мәзірі арқылы Жазбалар қосыла алады. Негізгі мәзір арқылы жазбалар тізіміне жете аласыз.⏎\n⏎\n⏎\n<b>Бетбелгілері</b>⏎\nАят контекст мәзірі арқылы бетбелгілерін қоса аласыз. Негізгі мәзір арқылы Бетбелгісін Меңгеруіне жете аласыз. Бетбелгісін Меңгеру контекст мәзірі, таңбаларды пайдалану арқылы, бетбелгілерінің топтасуына мүмкіндік береді.⏎\n⏎\n⏎\n<b>Іздеу</b>⏎\nМәтінді іздеуде, осы сияқты *, ?, ЖӘНЕ, НЕМЕСЕ, ЖОҚ (көбірек мәлімет үшін \"Apache Lucene - Query Parser Syntax\" көр) арнайы сипаттарын қамтиды⏎\n⏎\n⏎\n<b>Контекст Мәзірі</b>⏎\n⏎\nАятқа келтіретін іс әрекеттерді көру үшін, Киелі Кітапқа Шолу таңбасын ұзақ басып, контекст мәзірін ашыңыз.⏎\n⏎\nҚұжаттарды таңдау тізімінде (құжат селектор бөлімінде) мәліметтерді көру үшін немесе жою үшін құжат таңбасын ұзақ басып ұстаңыз.⏎\n⏎\nТарих тізіміне қайта қол жеткізу үшін Артқа деген таңбасын ұзақ басып ұстаңыз⏎</string>
   <string name="version_text">Версия %s</string>
   <string name="no_sdcard_error">SD картаны салыңыз және Киелі Кітап қайта қосыңыз.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Құжат</string>
   <string name="selectPassage">Аят (Үзінді)</string>
   <string name="search">Табу</string>
@@ -15,6 +15,7 @@
   <string name="history">Тарих</string>
   <string name="speak">Сөйлеңіз</string>
   <string name="help">Көмек</string>
+  <string name="verse">Аят</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Кітапті Таңдау</string>
   <string name="choosePassageChapterName">Тарауды Таңдау</string>
@@ -214,6 +215,7 @@
   <string name="save">Сақтау</string>
   <string name="error">Қате</string>
   <string name="more">Көбірек</string>
+  <string name="more_dotted">Көбірек...</string>
   <string name="retry">Қайтадан әрекет жасау</string>
   <string name="please_wait">Кұте тұрыңыз...</string>
   <string name="all">Бәрі</string>
