--- a/AndBible/res/values-pt/strings.xml
+++ b/AndBible/res/values-pt/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navegação</b>\nVá para o próximo capítulo ou o anterior usando o track-ball, os botões direcionais ou toque na tela para avançar ou retroceder \n\n<b>Menu</b>\nPressione a tecla MENU para executar as ações \n\nPara baixar mais documentos, pressione Menu/Mais/Baixar Documentos\n\n<b>Falar</b>\nPressione Falar para acessar um menu para iniciar ou parar a leitura.\n\n<b>Anotações</b>\nAnotações podem ser adicionadas através da opção de menu Anotações no menu de contexto dos versículos. A lista de anotações pode ser acessada através do menu principal.\n\n<b>Favoritos</b>\nOs Favoritos podem ser adicionados através do menu de contexto dos versículos. O Gerenciador dos Favoritos pode ser acessado através do menu principal. O menu de contexto do Gerenciador dos Favoritos permite que os favoritos sejam agrupados, através de marcadores.\n\n<b>Busca</b>\nA Busca pode conter caracteres especiais como: *, ?, AND, OR, NOT (veja \"Apache Lucene - Query Parser Syntax\" para mais detalhes - em inglês)\n\n<b>Menus de Contexto</b>\nPressione longamente algum versículo com a bíblia aberta para abrir o menu de contexto para ações que afetem o versículo selecionado.\nPressione longamente em um documento no seletor de documentos para apagar o documento ou ver mais informações.\nPressione longamente o botão voltar para acessar o Histórico.</string>
   <string name="version_text">Versão %s</string>
   <string name="no_sdcard_error">Por favor insira um cartão SD e inicie o And Biblie novamente.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Documento</string>
   <string name="selectPassage">Passagem</string>
   <string name="search">Pesquisar</string>
