--- a/AndBible/res/values-vi/strings.xml
+++ b/AndBible/res/values-vi/strings.xml
@@ -7,7 +7,7 @@
   <string name="help_text_long"><b>Navigation</b>\nTới chương tiếp theo và chương trước đó bằng cách sử dụng track-ball, D-pad hoặc vuốt ngang màn hình bằng tay.\nChạm 2 lần liên tiếp để mở hoặc tắt chế độ toàn màn hình.\n<b>Menu</b> \nBấm MENU để có nhiều lựa chọn\n\nĐể tải về nhiều Kinh Thánh chọn Menu/More/Download Documents \n\n<b>Đọc</b>\nNhấn Speak để truy cập vào hộp thoại để bắt đầu hoặc ngừng đọc.\n\n<b>Ghi chú</b>\nCác ghi chú có thể được thêm vào bằng cách chạm và giữ vài giây vào màn hình, sau đó chọn Ghi chú của tôi. Danh sách các ghi chú đang tồn tại có thể truy cập thông qua Menu chính.\n<b>Đánh dấu</b>\nĐánh dấu có thể được thêm vào bằng cách chạm và giữ lâu vào màn hình, sau đó chọn Thêm đánh dấu. Quản lý các đánh dấu có thể truy cập từ menu chính. \n\n<b>Tìm kiếm</b>\nViệc tìm kiếm có thể có các kí tự đặc biệt như *,?,AND,OR,NOT (xem chi tiết tại \"Apache Lucene - Query Parser Syntax\")\n\n<b>Context Menus</b> \nNhấm lâu vào màn hình Kinh Thánh để mở context Menu.\nNhấm lâu vào Kinh Thánh để xóa hoặc xem thông tin.\nNhấn lâu nút Back để truy cập vào Lịch sử.</string>
   <string name="version_text">Phiên bản %s</string>
   <string name="no_sdcard_error">Gắn thẻ nhớ vào sau đó khởi động lại chương trình.</string>
-  <!--main menu-->
+  <!--Main menu-->
   <string name="chooseBook">Tài liệu</string>
   <string name="selectPassage">Sách</string>
   <string name="search">Tìm kiếm</string>
